fixed visual problems on mobile 2

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,1 @@
-#textarea {
-        width: 100%;
-        max-width: 900px;
-        box-sizing: border-box;
-        resize: vertical;
-}
+/* for future styling */
